<?xml version="1.0"?>
<package format="1">
  <name>radio_ros_connectivity_checker</name>
  <version>0.0.1</version>
  <description>The radio_ros_connectivity_checker package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>multimaster_msgs_fkie</run_depend>
  <run_depend>kobuki_msgs</run_depend>

  <export>
  </export>
</package>
